Added webserver to return snapshot png from a GET on localhost:8080. Structure fixes, integ tests.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,9 @@
 #adafruit-circuitpython-busdevice
 adafruit-circuitpython-bme280
 #Adafruit-Blinka
-mysql
+mysql-connector-python
+numpy
 ipython
+pandas
+matplotlib
+#picamera
