--- a/setup.cfg
+++ b/setup.cfg
@@ -14,4 +14,5 @@ scripts =
 
 [options.entry_points]
 console_scripts =
-    executable-name = cli.wxmon:main
+    executable-name = ui.wxmon:main
+    executable-name = ui.image_server:main    
